@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.4-2.003
-Date: 2025-04-06
+Version: 3.4-2.005
+Date: 2025-04-30
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
