@@ -127,6 +127,7 @@ export("CVforPCF")
 export("dclf.progress")
 export("dclf.sigtrace")
 export("dclf.test")
+export("DeltaMethodVarOfRatio")
 export("densityAdaptiveKernel.ppp")
 export("densityAdaptiveKernel.ppplist")
 export("densityAdaptiveKernel.splitppp")
@@ -389,6 +390,7 @@ export("pool.fasp")
 export("pool.fv")
 export("pool.quadrattest")
 export("pool.rat")
+export("posify")
 export("PPversion")
 export("predict.exactppm")
 export("predict.rho2hat")
@@ -545,6 +547,7 @@ export("validate.angles")
 export("validate.weights")        
 export("vanilla.fv")
 export("varblock")
+export("VarOfWtdMean")
 export("Vmark")
 export("weightedclosepairs")
 export("which.max.im")
