@@ -13,4 +13,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-08-20" "3.3-2" 230 517 0 31571 6364
 "2024-10-22" "3.3-3" 235 525 0 31903 6364
 "2025-03-20" "3.4-0" 240 534 0 33260 6364
-"2025-04-06" "3.4-2.003" 240 534 0 33413 6364
+"2025-04-30" "3.4-2.005" 240 537 0 33415 6364
