@@ -1,11 +1,13 @@
 
-        CHANGES IN spatstat.explore VERSION 3.4-2.002
+        CHANGES IN spatstat.explore VERSION 3.4-2.005
 
 OVERVIEW
 
     o Shrinkage estimator of relative risk.
 
     o Normalised relative risk.
+
+    o Bug fixes.
     
 SIGNIFICANT USER-VISIBLE CHANGES
 
@@ -15,6 +17,14 @@ SIGNIFICANT USER-VISIBLE CHANGES
     o relrisk.ppp
     New argument 'normalise' controls whether the estimate will be
     normalised so that constant risk corresponds to the value 1.
+
+BUG FIXES
+
+    o Smooth.ppp
+    The estimate of standard error could sometimes take the value NaN.
+    This occurred when the bandwidth sigma was too small, leading to a
+    slightly negative value for the delta method estimate of variance.
+    Fixed.
 
         CHANGES IN spatstat.explore VERSION 3.4-2
 
